src/objects/ints__Credit_Report_Liability__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountClosedDate__c</fullName>
        <label>Account Closed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountIdentifier__c</fullName>
        <label>Account Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountOpenDatee__c</fullName>
        <formula>null</formula>
        <label>Account Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ints__AccountOpenedDate__c</fullName>
        <label>Account Opened Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountOwnershipType__c</fullName>
        <label>Account Ownership Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountPaidDate__c</fullName>
        <label>Account Paid Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountReportedDate__c</fullName>
        <label>Account Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountStatusType__c</fullName>
        <label>Account Status Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountType__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__BorrowerID__c</fullName>
        <label>Borrower ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ChargeOffAmount__c</fullName>
        <label>Charge Off Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ConsumerDisputeIndicator__c</fullName>
        <label>Consumer Dispute Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditBusinessType__c</fullName>
        <label>Credit Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditFileID__c</fullName>
        <label>Credit File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditLiabilityID__c</fullName>
        <label>Credit Liability ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditLimitAmount__c</fullName>
        <label>Credit Limit Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditLoanType__c</fullName>
        <label>Credit Loan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipLabel>CreditReportLiability</relationshipLabel>
        <relationshipName>CreditReportLiability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__CreditTradeReferenceID__c</fullName>
        <label>Credit Trade Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Repository__c</fullName>
        <label>Credit Repository</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_City__c</fullName>
        <label>Creditor City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_Name__c</fullName>
        <label>Creditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_Phone__c</fullName>
        <label>Creditor Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_PostalCode__c</fullName>
        <label>Creditor Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_State__c</fullName>
        <label>Creditor State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Creditor_StreetAddress__c</fullName>
        <label>Creditor Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Current_Rating__c</fullName>
        <label>Current Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__HighCreditAmount__c</fullName>
        <label>High Credit Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Highest_Adverse_Rating__c</fullName>
        <label>Highest Adverse Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__LastActivityDate__c</fullName>
        <label>Last Activity Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Late_Count__c</fullName>
        <label>Late Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__ManualUpdateIndicator__c</fullName>
        <label>Manual Update Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MonthlyPaymentAmount__c</fullName>
        <label>Monthly Payment Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MonthsRemainingCount__c</fullName>
        <label>Months Remaining Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MonthsReviewedCount__c</fullName>
        <label>Months Reviewed Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Most_Recent_Adverse_Rating__c</fullName>
        <label>Most Recent Adverse Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__PastDueAmount__c</fullName>
        <label>Past Due Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Payment_Pattern__c</fullName>
        <label>Payment Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Payment_Start_Date__c</fullName>
        <label>Payment Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TermsDescription__c</fullName>
        <label>Terms Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TermsMonthsCount__c</fullName>
        <label>Terms Months Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TermsSourceType__c</fullName>
        <label>Terms Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__UnpaidBalanceAmount__c</fullName>
        <label>Unpaid Balance Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Liability</label>
    <nameField>
        <displayFormat>CRL-{0000000000}</displayFormat>
        <label>Credit Report Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>